# LonelyCube

./: CMakeCache.txt  CMakeLists.txt  COPYING.txt  README.md  README.txt  REAME.txt  camera.cpp  camera.h  chunk.cpp  chunk.h  constants.h  indexBuffer.cpp  main.cpp  player.cpp  random.cpp  random.h  renderer.cpp  renderer.h  shader.cpp  shader.h  texture.cpp  texture.h  vertexArray.cpp  vertexArray.h  vertexBuffer.cpp  vertexBufferLayout.h  world.cpp  world.h
lib/glad/: glad.c  glad.h
res/: settings.txt
res/resourcePack/blocks/: blockNames.json
res/resourcePack/blocks/blockData/: grass.json  longGrass.json  oakLeaves.json  oakLog.json  sand.json  stone.json  torch.json
res/resourcePack/blocks/blockModels/: cross.json  cube.json  torch.json
res/shaders/: autoExposure.comp.spv  basicVertex.txt  black.comp.spv  blit.frag.spv  block.vert.spv  blockFragment.txt  blockOutline.vert.spv  blockVertex.txt  bloomBlit.txt  bloomDownsample.comp.spv  bloomDownsample.txt  bloomUpsample.comp.spv  copy.frag.spv  crosshair.vert.spv  crosshairFragment.txt  crosshairVertex.txt  exposure.comp.spv  exposure.frag.spv  fontVertex.txt  fullscreenBlit.comp.glsl  gradient.comp.spv  logLuminanceDownsample.txt  luminance.comp.spv  parallelReduceMean.comp.spv  screenShaderFragment.txt  simpleDownsample.txt  sky.comp.spv  sky.txt  sun.txt  test.vert.spv  toneMap.frag.spv  water.frag.spv  waterFragment.txt
src/client/: applicationState.cpp  applicationState.h  applicationStateManager.cpp  applicationStateManager.h  bloom.cpp  bloom.h  camera.cpp  camera.h  client.cpp  clientNetworking.cpp  clientNetworking.h  clientPlayer.cpp  clientPlayer.h  clientWorld.cpp  clientWorld.h  computeShader.cpp  computeShader.h  frameBuffer.h  game.cpp  game.h  indexBuffer.cpp  indexBuffer.h  input.cpp  input.h  logicThread.cpp  logicThread.h  luminance.cpp  luminance.h  meshBuilder.cpp  meshBuilder.h  newClientWorld.cpp  newClientWorld.h  player.cpp  player.h  renderThread.cpp  renderThread.h  renderer.cpp  renderer.h  shader.cpp  shader.h  (+11 more)
src/client/entities/: meshManager.cpp  meshManager.h
src/client/entities/components/: meshComponent.cpp
src/client/graphics/: autoExposure.cpp  autoExposure.h  bloom.cpp  bloom.h  camera.cpp  camera.h  computeShader.cpp  computeShader.h  entityMeshManager.cpp  entityMeshManager.h  frameBuffer.h  glRenderer.cpp  glRenderer.h  indexBuffer.cpp  indexBuffer.h  luminance.cpp  luminance.h  meshBuilder.cpp  meshBuilder.h  renderer.cpp  renderer.h  shader.cpp  shader.h  stb_image.cpp  texture.cpp  texture.h  vertexArray.cpp  vertexArray.h  vertexBuffer.cpp  vertexBuffer.h  vertexBufferLayout.h
src/client/graphics/vulkan/: descriptors.cpp  descriptors.h  helloTriangle.cpp  helloTriangle.h  images.cpp  images.h  pipelines.cpp  pipelines.h  shader.cpp  shaders.cpp  shaders.h  utils.h  vulkanEngine.cpp  vulkanEngine.h  vulkanImage.cpp  vulkanImage.h  vulkanImages.cpp
src/client/gui/: font.cpp  font.h  menu.cpp  menu.h  menuRenderer.cpp  menuRenderer.h  menuUpdateInfo.h  pauseMenu.cpp  pauseMenu.h  startMenu.cpp  startMenu.h
src/client/shaders/: autoExposure.comp.glsl  black.comp.glsl  blit.frag.glsl  block.frag.glsl  block.vert.glsl  blockOutline.frag.glsl  blockOutline.vert.glsl  bloomBlit.comp.glsl  bloomDownsample.comp.glsl  bloomUpsample.comp.glsl  compile.sh  copy.frag.glsl  crosshair.frag.glsl  crosshair.vert.glsl  exposure.comp.glsl  exposure.frag.glsl  font.frag.glsl  font.vert.glsl  fullscreen.vert.glsl  fullscreenBlit.comp.glsl  fullscreenBlit.frag.glsl  gradient.comp.glsl  luminance.comp.glsl  menu.frag.glsl  menu.vert.glsl  parallelReduceMean.comp.glsl  sky.comp.glsl  sun.comp.glsl  test.frag.glsl  test.vert.glsl  toneMap.frag.glsl  vert.spv  water.frag.glsl  water.vert.glsl
src/core/: block.h  camera.cpp  camera.h  chunk.cpp  chunk.h  chunkManager.cpp  chunkManager.h  compression.cpp  compression.h  config.cpp  config.h  constants.h  indexBuffer.cpp  indexBuffer.h  lighting.cpp  lighting.h  log.cpp  log.h  packet.h  pch.h  player.cpp  player.h  position.h  random.cpp  random.h  renderer.cpp  renderer.h  resourceMonitor.cpp  resourceMonitor.h  resourcePack.cpp  resourcePack.h  serverPlayer.cpp  serverPlayer.h  serverWorld.cpp  serverWorld.h  shader.cpp  shader.h  terrainGen.cpp  terrainGen.h  texture.cpp  (+10 more)
src/core/ECS/: ECS.cpp  ECS.h  ECSView.h  sceneView.h
src/core/entities/: ECS.cpp  ECS.h  ECSView.h  entityManager.cpp  entityManager.h  entityMeshManager.h  meshManager.cpp  meshManager.h  physicsEngine.cpp  physicsEngine.h
src/core/entities/components/: itemComponent.h  meshComponent.cpp  meshComponent.h  physicsComponent.cpp  physicsComponent.h  transformComponent.cpp  transformComponent.h
src/core/utils/: binarySearch.h  iVec3.cpp  iVec3.h  vec3.h
src/server/: server.cpp  serverNetworking.cpp  serverNetworking.h  world.cpp  world.h
src/shaders/: basicFragment.txt  crosshairFragment.txt  waterFragment.txt  wireframeFragment.txt  wireframeVertex.txt
tests/: CMakeLists.txt  ECS.cpp
